2015-06-02  Roland McGrath  <roland@hack.frob.com>

	* stdlib/setenv.c [__GNUC__,__GNUC_MINOR__ < 4,7]: Use
	"-Wuninitialized" rather than "-Wmaybe-uninitialized" in pragma.

2015-06-02  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/libm-test-ulps: Update.

2015-06-01  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (HAVE_CLOCK_GETTIME_VSYSCALL):
	Define.
	(HAVE_GETTIMEOFDAY_VSYSCALL): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h
	(HAVE_CLOCK_GETTIME_VSYSCALL): Likewise.
	(HAVE_GETTIMEOFDAY_VSYSCALL): Likewise.
	* sysdeps/unix/sysv/linux/timespec_get.c: Include errno.h.
	* sysdeps/unix/sysv/linux/x86/clock_gettime.c: Remove file.
	* sysdeps/unix/sysv/linux/x86/timespec_get.c: Likewise.

2015-06-01  Martin Sebor  <msebor@redhat.com>

	[BZ #18116]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S
	(__setcontext): Use extended four-operand version of mtsf whenever
	possible.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S
	(__novec_swapcontext): Likewise.

2015-06-01  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/scripts/compare_bench.py: New file.
	* benchtests/scripts/import_bench.py (mean): New function.
	(split_list): Likewise.
	(do_for_all_timings): Likewise.
	(compress_timings): Likewise.

	* benchtests/scripts/import_bench.py: New file.
	* benchtests/scripts/validate_benchout.py: Import import_bench
	instead of jsonschema.
	(validate_bench): Remove function.
	(main): Use import_bench.

2015-06-01  Steve Ellcey  <sellcey@imgtec.com>

	* resolv/res_hconf.c (_res_hconf_reorder_addrs): Use a union to
	copy data from cur_ifr->ifr_addr and cur_ifr->ifr_netmask.

2015-05-29  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2015-05-28  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/exit-thread.h (__exit_thread): If not detached,
	set THREAD_SELF->tid to a magic value and futex-wake it.